--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,8 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+[metadata.heroku]
+  root-package = "github.com/olegsobchuk/moneyrate"
+  go-version = "1.10"
+  install = [ "./..." ]
